@@ -3975,9 +3975,12 @@ int contains_illegal_object_chars(char *name){
 		if(ch<32 || ch==127)
 			return TRUE;
 
+		/* REMOVED 3/11/05 to allow for non-english spellings, etc. */
 		/* illegal extended ASCII characters */
+		/*
 		if(ch>=166)
 			return TRUE;
+		*/
 
 		/* illegal user-specified characters */
 		if(illegal_object_chars!=NULL)
@@ -4014,9 +4017,12 @@ char *clean_macro_chars(char *macro,int options){
 			if(ch<32 || ch==127)
 				continue;
 
+			/* REMOVED 3/11/05 to allow for non-english spellings, etc. */
 			/* illegal extended ASCII characters */
+			/*
 			if(ch>=166)
 				continue;
+			*/
 
 			/* illegal user-specified characters */
 			illegal_char=FALSE;
