@@ -11,6 +11,8 @@ Nagios Change Log
 * Fixed segfault with mispaired servicegroup memberships
 * Added $PROCESSSTARTTIME$ macro
 * If not specified, host address and alias now default to host name
+* Extended ASCII characters no longer auto-stripped from object names and macros
+* Added external commands to adjust host and service notification numbers
 
 
 
